# industrial-smoke-monitor

./: LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
alert_reviewer/: README.md  pyproject.toml  requirements.txt
alert_reviewer/docs/: architecture.html  operations.html
alert_reviewer/gui/: alert_reviewer_gui.py
alert_reviewer/src/alert_reviewer/: __init__.py  review.py
alert_reviewer/tests/: test_review.py
configs/: ijmond.yaml  monitor_settings.env.example
dataset_builder/: README.md  pyproject.toml  requirements.txt
dataset_builder/docs/: architecture.html  operations.html
dataset_builder/gui/: annotator_gui.py
dataset_builder/scripts/: check_dataset.py  create_dataset_yaml.py  crop_yolo_roi.py  extract_frames.py  merge_yolo.py
dataset_builder/src/smoke_dataset_builder/: __init__.py  crop.py  dataset.py  roi.py  video.py  yolo.py
dataset_builder/tests/: test_dataset.py  test_roi.py  test_yolo.py
deploy/: install_windows.ps1  run_windows.ps1  smoke-monitor.service
docs/: architecture.html  offline_win_amd64_python311_cpu_install_guide.html  operations.html
intro_YOLO11/: README.md
runs/train/smoke_yolo11n/: results.csv
scripts/: check_rtsp.py  export_model.py  prepare_ijmond.py  replay_video.py  run_monitor.py  test_email.py  train.py  validate.py
src/smoke_monitor/: __init__.py  alarm.py  detector.py  emailer.py  live_stream.py  logging_utils.py  monitor.py  rtsp.py  settings.py  storage.py
supplements/: training_result_evaluation_guide.html
supplements/assets/ijmond_run/: args.yaml
tests/: test_alarm.py  test_live_stream.py  test_prepare_ijmond.py  test_project_metadata.py  test_settings.py  test_train.py
video_splitter/: README.md  pyproject.toml  requirements.txt
video_splitter/docs/: architecture.html  operations.html
video_splitter/gui/: video_splitter_gui.py
video_splitter/src/video_splitter/: __init__.py  core.py
video_splitter/tests/: test_core.py
