[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-smoke-dataset-builder"
version = "0.1.0"
description = "Extract, annotate, validate, and merge YOLO11 smoke datasets from videos"
requires-python = ">=3.11,<3.12"
dependencies = [
    "ultralytics>=8.3.0,<9.0",
    "opencv-python>=4.9.0,!=4.13.0.90",
    "numpy==1.26",
    "PyYAML>=6.0",
    "python-dotenv>=1.0",
    "Pillow>=10.0",
    "torch==2.6.0+cpu",
    "torchvision==0.21.0+cpu",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
