[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "industrial-video-splitter"
version = "0.1.0"
description = "A Tkinter GUI for previewing and splitting industrial smoke videos"
requires-python = ">=3.11,<3.12"
dependencies = [
    "opencv-python>=4.9.0,!=4.13.0.90",
    "numpy==1.26",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
